# SliceEngine2

./: .gitignore  LICENSE  README.md
Slice/: CMakeLists.txt  CMakePresets.json  main.cpp
Slice/SliceEditor/: CMakeLists.txt  main.cpp
Slice/SliceEngine/: CMakeLists.txt
Slice/SliceEngine/src/: SliceEngine.cpp  SliceEngine.h
Slice/SliceEngine/src/Utilities/: Logger.cpp  Logger.h
